k8/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hostping-service-backend
  labels:
    app: hostping
    layer: backend
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: hostping
    layer: backend
  type: NodePort
